# Створюємо статичну бібліотеку, яка не буде встановлюватися в систему,
# а буде використовуватися для лінкування з іншими частинами проєкту.
noinst_LIBRARIES = libkycore.a
ARFLAGS = rv

# Вихідні файли для бібліотеки libkycore.
# Ця бібліотека містить основні структури даних (Rack) та логіку їх фіналізації.
libkycore_a_SOURCES = \
	rack.h \
	rack.cpp \
	types.cpp \
	finalize.cpp
